<resources>
    <string name="app_name">Sqllite</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login_welcome">Welcome</string>
    <string name="login_sign_in">SIGN IN</string>
    <string name="login_sign_up_caption">Don\'t have an account? SIGN UP</string>
</resources>
