<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:background="@drawable/login_bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/login_welcome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/login_welcome"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:textColor="#ffffff"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/login_enter_username_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:padding="15dp"
            android:hint="@string/username"
            android:inputType="text"
            android:background="@drawable/login_username_edittext"
            android:textSize="17sp">
        </EditText>

        <EditText
            android:id="@+id/editText3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textSize="17sp"
            android:padding="15dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/login_password_edittext"
            android:inputType="textPassword" />


    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/login_sign_in"
            android:background="@drawable/login_sign_in_button">
        </Button>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:textColor="#ffffff"
            android:text="@string/login_sign_up_caption"
            android:textSize="17sp"
            android:padding="5dp"
            android:gravity="center"></TextView>
    </LinearLayout>

</LinearLayout>



